# BioMining

./: .gcloudignore  .gitignore  ALIGNMENT_VERIFICATION.md  APP_JS_REFACTORING_SUMMARY.md  BIO_ENTROPY_MINING_EXPLAINED.md  BITCOIN_VALIDATION_GUIDE.md  BLOCKCHAIN_FETCHER_FIX_SUMMARY.md  CLOUDSHELL_GUI_SOLUTIONS.md  CMakeLists.txt  CORRECTION_DOCKERFILE_ARGS.md  DEMARRAGE_RAPIDE.md  DEPLOIEMENT_LOCAL.md  DEPLOYMENT.md  DEPLOYMENT_CHANGES_SUMMARY.txt  DEPLOYMENT_GUIDE.md  DEPLOYMENT_INSTRUCTIONS.md  DEPLOYMENT_OPTIONS.md  DEPLOYMENT_READY.md  DEPLOYMENT_READY_v1.0.0.md  DEPLOY_CPP_GUIDE.md  DEPLOY_FINAL_CLEAN.md  DEPLOY_FINAL_FIXES.md  DEPLOY_FIX_11.md  DEPLOY_NOW.md  DEPLOY_QUICKSTART.md  DEPLOY_URGENT.md  DOCKER_PARSING_FIX.md  Dockerfile  Dockerfile.cpp-fixed  Dockerfile.cpp-moc-fixed  Dockerfile.cpp-simple  Dockerfile.cpp-simple-safe  Dockerfile.no-psutil  Dockerfile.web  EXAMPLES_FIXED.md  FINAL_DEPLOYMENT_READY.md  FINAL_STATUS.txt  FIX_11_BLOCKCHAIN_FETCHER_INVESTIGATION.md  FIX_IBIOCOMPUTEINTERFACE_SYMBOL.md  FIX_PYBIND11_ERROR.md  (+80 more)
.github/: pull_request_template.md
.github/workflows/: ci-cd.yml
Archives/: ANALYSIS_BIO_ENTROPY_ALIGNMENT.md  BIOLOGICALNETWORK_BINDINGS.md  BIO_ENTROPY_CODE_MAPPING.md  BIO_ENTROPY_MINING_DIAGRAM.md  CLOUDSHELL_SETUP.md  CMakeLists.txt  COMPILATION_SUCCESS.md  DEPLOYMENT_OPTIONS.md  DEPLOYMENT_UPDATE_BIO_ENTROPY.md  DEPLOY_FINAL_CLEAN.md  DEPLOY_FINAL_FIX.md  DEPLOY_NOW.md  DEPLOY_OPTIONS.md  DEPLOY_QUICK_REFERENCE.md  DEPLOY_REAL_CPP_GUIDE.md  DEPLOY_SUMMARY.md  Dockerfile.cpp-backup  Dockerfile.cpp-enabled  Dockerfile.cpp-noqt  Dockerfile.cpp-simple  Dockerfile.enhanced-fallbacks  Dockerfile.no-psutil  Dockerfile.ultra-minimal  FINAL_DEPLOYMENT_GUIDE.md  FINAL_SUCCESS.md  FIX_LAZY_INITIALIZATION.md  FIX_QOBJECT_PYBIND11.md  GITHUB_PUSH_SUCCESS.md  INSTRUCTIONS_DEPLOYMENT_IMMEDIAT.md  PUSH_SUMMARY.md  QUICK_DEPLOY.sh  README.md  README_Corrections_BioMining.md  READY_TO_DEPLOY.md  ULTIMATE_DEPLOYMENT_GUIDE.md  WEB_INTERFACE_UPDATE_SUMMARY.md  biological_bitcoin_learning.py  cloudrun-service.yaml  cloudshell_setup_final.sh  deploy_cpp_moc_direct.sh  (+19 more)
Archives/cloudrun/: CMakeLists.simple2.txt  Dockerfile.simple  docker-compose.yml  test_deploy_dryrun.sh  validate_gcp_labels.sh
Archives/cloudrun/.github/workflows/: deploy-cloudrun.yml
Archives/cloudrun/config/: biomining_config.json
Archives/cloudrun/include/: biomining_app.hpp
Archives/cloudrun/scripts/: test.sh
Archives/config/: mea_devices.json
Archives/deploy/: one_click_deploy.sh  quick_deploy.sh
Archives/docs/: API_REFERENCE.md  MEA_BITCOIN_LEARNING_GUIDE.md  USER_GUIDE.md
Archives/examples/: CMakeLists.txt  basic_mining_usage.cpp  complete_workflow.cpp  custom_benchmark.cpp  real_mea_example.cpp
Archives/include/: mainwindow.h
Archives/include/bio/: biological_network.h  biological_network_adapter.h  ibio_compute_interface.h  real_mea_adapter.h
Archives/include/crypto/: bio_entropy_generator.h  bitcoin_miner.h  hybrid_bitcoin_miner.h
Archives/python_bindings/: CMakeLists.txt
Archives/src/bio/: biological_network_adapter.cpp
Archives/src/cpp/: main.cpp  mainwindow_slots.cpp  mea_interface.cpp  real_mea_interface.cpp
Archives/tests/: test_biological_network.cpp  test_hybrid_bitcoin_miner.cpp
backup_before_fix/: include_bio_biological_network.h  include_crypto_hybrid_bitcoin_miner.h
backup_comprehensive_fix/: include_crypto_bitcoin_miner.h  include_crypto_hybrid_bitcoin_miner.h  src_cpp_hybrid_bitcoin_miner.cpp
backup_ultimate_fix/: include_bio_biological_network.h  include_crypto_bitcoin_miner.h  include_crypto_hybrid_bitcoin_miner.h  src_cpp_hybrid_bitcoin_miner.cpp
cloudrun/: CMakeLists.simple.txt  CMakeLists.txt  CMakeLists.txt.complex  Dockerfile  README_CLOUDRUN.md  test_build.sh  test_image_build.sh
cloudrun/include/: biomining_app.hpp
cloudrun/scripts/: deploy.sh
cloudrun/src/: biomining_app.cpp  biomining_app_main.cpp  simple_server.cpp
config/: mea_bitcoin_test.json
deploy/: README_DEPLOY.md  simple_biomining_demo.py
docs/: DEVELOPER_GUIDE.md  GETTING_STARTED.md  HYBRID_MINING.md  MEA_HARDWARE_GUIDE.md  TECHNICAL_ARCHITECTURE.md
examples/: CMakeLists.txt  basic_mea_usage.cpp  basic_mining_usage.cpp  complete_workflow.cpp  complete_workflow_broken.cpp
include/: mainwindow.h
include/bio/: biological_network.h  ibio_compute_interface.h  mea_interface.h  real_mea_interface.h
include/crypto/: bio_entropy_generator.h  bitcoin_miner.h  hybrid_bitcoin_miner.h
python_bindings/: CMakeLists.txt  biomining_python.cpp  setup.py
scripts/: deploy.sh
src/bio/: biological_network_adapter.cpp  ibio_compute_interface.cpp  real_mea_adapter.cpp
src/cpp/: biological_network.cpp  bitcoin_miner.cpp  cli_main.cpp  hybrid_bitcoin_miner.cpp  main.cpp  mainwindow.cpp  mainwindow_slots.cpp  me-interface.cpp  mea_interface.cpp  real_mea_interface.cpp
src/crypto/: bio_entropy_generator.cpp
tests/: test_biological_network.cpp  test_bitcoin_miner.cpp  test_hybrid_bitcoin_miner.cpp  test_integration.cpp  test_mea_bitcoin_learning.py  test_mea_interface.cpp
web/: Dockerfile  index.html  requirements.txt  start_web_interface.sh
web/api/: server.py
web/css/: styles.css
web/js/: app.js  app.js.hybrid.backup  app_pure_python.js  charts.js  real-mining.js  training.js  websocket-handler.js
